
add_subdirectory(Anim2D)
add_subdirectory(AssetIO)
add_subdirectory(Core)
add_subdirectory(DataStructures)
add_subdirectory(Dispatch)
add_subdirectory(Graphics)
add_subdirectory(Math)
add_subdirectory(Memory)
add_subdirectory(Network)
add_subdirectory(Platform)
add_subdirectory(Runtime)
add_subdirectory(TMPUtils)
add_subdirectory(Text)
add_subdirectory(Job)
add_subdirectory(UI)
